corrected icon alignment in navbar dropdown menu

--- a/assets/style.css
+++ b/assets/style.css
@@ -40,6 +40,6 @@ ul {
   background: #d64725 !important;
 }
 
-.bckgrd {
-  background-image: url("/assets/images/bckgrd.png");
+.dropdown-menu {
+  min-width: 1000px !important;
 }
